WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102637
Web Inspector: [JSC] worker debugger shouldn't stop for "willExecuteProgram" instruction
https://bugs.webkit.org/show_bug.cgi?id=102637
Summary
Web Inspector: [JSC] worker debugger shouldn't stop for "willExecuteProgram" ...
Peter Wang
Reported
2012-11-18 20:27:30 PST
How to reproduce the bug: (1) Open inspector for any page including worker. (2) Choose "Pause on start", and trigger the worker in the page. (3) The worker inspector shows up and stop on the first statement of JS. (4) Click "Step over next" button, you have to click two times to let the pointer move to next statement. The root reason is worker inspector first stops for the "willExecuteProgram" instruction, then stops for the first statement of JS code. The breakpoint for "willExecuteProgram" is reserved for some special purpose, it's always inserted in the head of any head of a piece of JS code, in normal situation it's impossible to set it manually and it shouldn't influence user's operation. But, for worker inspector "Pause on start", it's triggered and causes problem. So, I try to override the interface to let worker debugger server doesn't stop for "willExecuteProgram".
Attachments
Patch
(6.55 KB, patch)
2012-11-18 20:39 PST
,
Peter Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peter Wang
Comment 1
2012-11-18 20:39:27 PST
Created
attachment 174883
[details]
Patch
WebKit Review Bot
Comment 2
2012-11-19 18:04:33 PST
Comment on
attachment 174883
[details]
Patch Clearing flags on attachment: 174883 Committed
r135224
: <
http://trac.webkit.org/changeset/135224
>
WebKit Review Bot
Comment 3
2012-11-19 18:04:37 PST
All reviewed patches have been landed. Closing bug.
Yury Semikhatsky
Comment 4
2012-11-19 21:19:04 PST
Comment on
attachment 174883
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=174883&action=review
> Source/WebCore/ChangeLog:10 > + No new DRT test case. Sorry, so far it seems impossible to write a case to controle the popupped
You can write protocol test for it that wouldn't depend on the inspector UI. See LayoutTests/inspector-protocol
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug