Web Inspector: [JSC] worker debugger shouldn't stop for "willExecuteProgram" instruction https://bugs.webkit.org/show_bug.cgi?id=102637

Patch by Peter Wang <peter.wang@torchmobile.com.cn> on 2012-11-19
Reviewed by Timothy Hatcher.

Override the interface "willExecuteProgram" to let WorkerScriptDebugServer to avoid to stop for it.

No new DRT test case. Sorry, so far it seems impossible to write a case to controle the popupped
worker inspector window.

* bindings/js/ScriptDebugServer.cpp:
(WebCore::ScriptDebugServer::createCallFrame):
(WebCore::ScriptDebugServer::callEvent):
(WebCore::ScriptDebugServer::willExecuteProgram):
* bindings/js/ScriptDebugServer.h:
(ScriptDebugServer):
* bindings/js/WorkerScriptDebugServer.cpp:
(WebCore::WorkerScriptDebugServer::willExecuteProgram):
(WebCore):
* bindings/js/WorkerScriptDebugServer.h:
(WorkerScriptDebugServer):

Canonical link: https://commits.webkit.org/120893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135224 268f45cc-cd09-0410-ab3c-d52691b4dbfc