Source/WebCore/bindings/js/WorkerScriptDebugServer.h
@@ -61,6 +61,8 @@ private:
 
     virtual bool isContentScript(JSC::ExecState*) { return false; }
 
+    virtual void willExecuteProgram(const JSC::DebuggerCallFrame&, intptr_t sourceID, int lineno, int columnNumber);
+
     virtual void runEventLoopWhilePaused();
 
     WorkerContext* m_workerContext;
